Updated Profit & Loss Section

--- a/index.html
+++ b/index.html
@@ -64,5 +64,229 @@
         <a href="#" class="read-more">READ MORE</a>
        </div>
     </div>
+    <div class="aboutContainer">
+        <div class="cards">
+            <div class="profitLoss">
+                <div class="card1">
+                    <h2 class="cardsHead">Profit & Loss</h2>
+                    <p>Consolidated Figures in Rs. Crores</p>
+                    <table>
+                        <thead>
+                            <tr>
+                                <td></td>
+                                <td class="normalTableData">March 2013</td>
+                                <td class="normalTableData">march 2014</td>
+                                <td class="normalTableData">march 2015</td>
+                                <td class="normalTableData">march 2016</td>
+                                <td class="normalTableData">march 2017</td>
+                                <td class="normalTableData">march 2018</td>
+                                <td class="normalTableData">march 2019</td>
+                                <td class="normalTableData">march 2020</td>
+                                <td class="normalTableData">march 2021</td>
+                                <td class="normalTableData">march 2022</td>
+                                <td class="normalTableData">march 2023</td>
+                                <td class="normalTableData">march 2024</td>
+                                <td class="normalTableData">TTM</td>
+                            </tr>
+                        </thead>
+                        <tbody class="CardsBody">
+                            <tr >
+                                <td class="CardsRow">Sales</td>
+                                <td class="CardsRow">62,989</td>
+                                <td class="CardsRow">81,809</td>
+                                <td class="CardsRow">94,648</td>
+                                <td class="CardsRow">108,646</td>
+                                <td class="CardsRow">117,966</td>
+                                <td class="CardsRow">123,104</td>
+                                <td class="CardsRow">146,463</td>
+                                <td class="CardsRow">156,949</td>
+                                <td class="CardsRow">164,177</td>
+                                <td class="CardsRow">191,754</td>
+                                <td class="CardsRow">225,458</td>
+                                <td class="CardsRow">240,893</td>
+                                <td class="CardsRow">248,692</td>
+                            </tr>
+                            <tr>
+                                <td class="CardsRow">Expenses</td>
+                                <td class="CardsRow">44,950</td>
+                                <td class="CardsRow">56,657</td>
+                                <td class="CardsRow">70,167</td>
+                                <td class="CardsRow">77,969</td>
+                                <td class="CardsRow">85,655</td>
+                                <td class="CardsRow">90,588</td>
+                                <td class="CardsRow">106,957</td>
+                                <td class="CardsRow">114,840</td>
+                                <td class="CardsRow">117,631</td>
+                                <td class="CardsRow">138,697</td>
+                                <td class="CardsRow">166,199</td>
+                                <td class="CardsRow">176,597</td>
+                                <td class="CardsRow">181,747</td>
+                            </tr>
+                        </hr>
+                            <tr>
+                                <th class="CardsRow">Operating Profit</th>
+                                <td class="CardsRow">18,040</td>
+                                <td class="CardsRow">25,153</td>
+                                <td class="CardsRow">24,482</td>
+                                <td class="CardsRow">30,677</td>
+                                <td class="CardsRow">32,311</td>
+                                <td class="CardsRow">32,516</td>
+                                <td class="CardsRow">39,506</td>
+                                <td class="CardsRow">42,109</td>
+                                <td class="CardsRow">46,546</td>
+                                <td class="CardsRow">53,057</td>
+                                <td class="CardsRow">59,259</td>
+                                <td class="CardsRow">64,296</td>
+                                <td class="CardsRow">66,945</td>
+                            </tr>
+                            <tr>
+                                <td class="CardsRow">OPM %</td>
+                                <td class="CardsRow">29%</td>
+                                <td class="CardsRow">31%</td>
+                                <td class="CardsRow">26%</td>
+                                <td class="CardsRow">28%</td>
+                                <td class="CardsRow">27%</td>
+                                <td class="CardsRow">26%</td>
+                                <td class="CardsRow">27%</td>
+                                <td class="CardsRow">27%</td>
+                                <td class="CardsRow">28%</td>
+                                <td class="CardsRow">28%</td>
+                                <td class="CardsRow">26%</td>
+                                <td class="CardsRow">27%</td>
+                                <td class="CardsRow">27%</td>
+                            </tr>
+                            <tr>
+                                <td class="CardsRow">Other Income</td>
+                                <td class="CardsRow">1,178</td>
+                                <td class="CardsRow">1,637</td>
+                                <td class="CardsRow">3,720</td>
+                                <td class="CardsRow">3,084</td>
+                                <td class="CardsRow">4,221</td>
+                                <td class="CardsRow">3,642</td>
+                                <td class="CardsRow">4,311</td>
+                                <td class="CardsRow">4,592</td>
+                                <td class="CardsRow">1,916</td>
+                                <td class="CardsRow">4,018</td>
+                                <td class="CardsRow">3,449</td>
+                                <td class="CardsRow">3,464</td>
+                                <td class="CardsRow">2,752</td>
+                            </tr>
+                            <tr>
+                                <td class="CardsRow">Interest</td>
+                                <td class="CardsRow">48</td>
+                                <td class="CardsRow">39</td>
+                                <td class="CardsRow">104</td>
+                                <td class="CardsRow">33</td>
+                                <td class="CardsRow">32</td>
+                                <td class="CardsRow">52</td>
+                                <td class="CardsRow">198</td>
+                                <td class="CardsRow">924</td>
+                                <td class="CardsRow">637</td>
+                                <td class="CardsRow">784</td>
+                                <td class="CardsRow">779</td>
+                                <td class="CardsRow">778</td>
+                                <td class="CardsRow">791</td>
+                            </tr>
+                            <tr>
+                                <td class="CardsRow">Depreciation</td>
+                                <td class="CardsRow">1,080</td>
+                                <td class="CardsRow">1,349</td>
+                                <td class="CardsRow">1,799</td>
+                                <td class="CardsRow">1,888</td>
+                                <td class="CardsRow">1,987</td>
+                                <td class="CardsRow">2,014</td>
+                                <td class="CardsRow">2,056</td>
+                                <td class="CardsRow">3,529</td>
+                                <td class="CardsRow">4,065</td>
+                                <td class="CardsRow">4,604</td>
+                                <td class="CardsRow">5,022</td>
+                                <td class="CardsRow">4,985</td>
+                                <td class="CardsRow">4,965</td>
+                            </tr>
+                            <tr>
+                                <th class="CardsRow">Profit before tax</th>
+                                <td class="CardsRow">18,090</td>
+                                <td class="CardsRow">25,402</td>
+                                <td class="CardsRow">26,298</td>
+                                <td class="CardsRow">31,840</td>
+                                <td class="CardsRow">34,513</td>
+                                <td class="CardsRow">34,092</td>
+                                <td class="CardsRow">41,563</td>
+                                <td class="CardsRow">42,248</td>
+                                <td class="CardsRow">43,760</td>
+                                <td class="CardsRow">51,687</td>
+                                <td class="CardsRow">56,907</td>
+                                <td class="CardsRow">61,997</td>
+                                <td class="CardsRow">63,941</td>
+                            </tr>
+                            <tr>
+                                <td class="CardsRow">Tax %</td>
+                                <td class="CardsRow">22%</td>
+                                <td class="CardsRow">24%</td>
+                                <td class="CardsRow">24%</td>
+                                <td class="CardsRow">24%</td>
+                                <td class="CardsRow">24%</td>
+                                <td class="CardsRow">24%</td>
+                                <td class="CardsRow">24%</td>
+                                <td class="CardsRow">23%</td>
+                                <td class="CardsRow">26%</td>
+                                <td class="CardsRow">26%</td>
+                                <td class="CardsRow">26%</td>
+                                <td class="CardsRow">26%</td>
+                                <td class="CardsRow"></td>
+                            </tr>
+                            <tr>
+                                <th class="CardsRow">Net Profit</th>
+                                <td class="CardsRow">14,076</td>
+                                <td class="CardsRow">19,332</td>
+                                <td class="CardsRow">20,060</td>
+                                <td class="CardsRow">24,338</td>
+                                <td class="CardsRow">26,357</td>
+                                <td class="CardsRow">25,880</td>
+                                <td class="CardsRow">31,562</td>
+                                <td class="CardsRow">32,447</td>
+                                <td class="CardsRow">32,562</td>
+                                <td class="CardsRow">38,449</td>
+                                <td class="CardsRow">42,303</td>
+                                <td class="CardsRow">46,099</td>
+                                <td class="CardsRow">47,659</td>
+                            </tr>
+                            <tr>
+                                <td class="CardsRow">EPS in Rs</td>
+                                <td class="CardsRow">35.55</td>
+                                <td class="CardsRow">48.92</td>
+                                <td class="CardsRow">50.68</td>
+                                <td class="CardsRow">61.58</td>
+                                <td class="CardsRow">66.71</td>
+                                <td class="CardsRow">67.46</td>
+                                <td class="CardsRow">83.87</td>
+                                <td class="CardsRow">86.19</td>
+                                <td class="CardsRow">87.67</td>
+                                <td class="CardsRow">104.75</td>
+                                <td class="CardsRow">115.19</td>
+                                <td class="CardsRow">126.88</td>
+                                <td class="CardsRow">131.13</td>
+                            </tr>
+                            <tr>
+                                <td class="CardsRow">Divident Payout %</td>
+                                <td class="CardsRow">31%</td>
+                                <td class="CardsRow">33%</td>
+                                <td class="CardsRow">78%</td>
+                                <td class="CardsRow">35%</td>
+                                <td class="CardsRow">35%</td>
+                                <td class="CardsRow">37%</td>
+                                <td class="CardsRow">36%</td>
+                                <td class="CardsRow">85%</td>
+                                <td class="CardsRow">43%</td>
+                                <td class="CardsRow">41%</td>
+                                <td class="CardsRow">100%</td>
+                                <td class="CardsRow">58%</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
